# ord-pepecoin

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  install.sh  ord.yaml.example  ordpep.yaml.example
.github/workflows/: ci.yaml  release.yaml
docs/: book.toml  prc-721-research.md  prc-721.md
src/: api.rs  arguments.rs  chain.rs  config.rs  epoch.rs  fee_rate.rs  height.rs  index.rs  inscription.rs  inscription_id.rs  lib.rs  media.rs  object.rs  options.rs  outgoing.rs  rarity.rs  representation.rs  sat.rs  settings.rs  subcommand.rs  templates.rs  test.rs  wallet.rs
src/index/: entry.rs  fetcher.rs  reorg.rs  rtx.rs  updater.rs
src/index/updater/: inscription_updater.rs
src/inscriptions/: inscription.rs  inscription_id.rs  media.rs  mod.rs  parser.rs  properties.rs  tag.rs
src/subcommand/: find.rs  index.rs  info.rs  list.rs  preview.rs  server.rs  traits.rs  wallet.rs
src/subcommand/server/: accept_encoding.rs  accept_json.rs  error.rs  query.rs
src/subcommand/wallet/: addresses.rs  balance.rs  broadcast.rs  create.rs  inscribe.rs  inscriptions.rs  job.rs  list.rs  outputs.rs  receive.rs  restore.rs  sats.rs  send.rs  transaction_builder.rs  transactions.rs
src/subcommand/wallet/batch/: file.rs  mod.rs  plan.rs
src/templates/: address.rs  block.rs  children.rs  home.rs  inscription.rs  inscriptions.rs  inscriptions_block.rs  output.rs  parents.rs  preview.rs  sat.rs  status.rs
src/wallet/: mod.rs  signer.rs
static/: index.css  preview-text.css
templates/: address.html  children.html  inscription.html  inscriptions.html  page.html  parents.html  preview-code.html  preview-font.html  preview-markdown.html  preview-model.html  status.html
test-bitcoincore-rpc/: Cargo.toml
test-bitcoincore-rpc/src/: api.rs  lib.rs  server.rs  state.rs
tests/: command_builder.rs  epochs.rs  expected.rs  find.rs  index.rs  json_api.rs  lib.rs  list.rs  server.rs  test_server.rs  version.rs  wallet.rs
tests/wallet/: addresses.rs  balance.rs  create.rs  inscribe.rs  inscriptions.rs  outputs.rs  receive.rs  restore.rs  sats.rs  send.rs  transactions.rs
