[package]
name = "ordpep"
description = "◉ Ordinal wallet and block explorer for pepecoin"
version = "0.10.2"
license = "CC0-1.0"
edition = "2021"
autotests = false
homepage = "https://github.com/mvdnbrk/ord-pepecoin"
repository = "https://github.com/mvdnbrk/ord-pepecoin"
autobins = false
rust-version = "1.89"

[workspace]
members = [".", "test-bitcoincore-rpc"]

[dependencies]
anyhow = { version = "1.0.56", features = ["backtrace"] }
axum = { version = "0.8.1", features = ["http2"] }
axum-server = "0.8.0"
base64 = "0.13.1"
bech32 = "0.9.1"
bip39 = "1.0.1"
bitcoin = { version = "0.29.1", features = ["rand"] }
boilerplate = { version = "1.1.1", features = ["axum"] }
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.0", features = ["derive"] }
ctrlc = { version = "3.2.1", features = ["termination"] }
derive_more = "0.99.17"
dirs = "4.0.0"
env_logger = "0.10.0"
futures = "0.3.21"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.2"
hyper = { version = "1.5.2", features = ["client", "http2"] }
hyper-util = { version = "0.1.10", features = ["client", "client-legacy", "http2", "tokio"] }
indicatif = "0.17.1"
lazy_static = "1.4.0"
log = "0.4.14"
mime = "0.3.16"
mime_guess = "2.0.4"
miniscript = "9.0.0"
mp4 = "0.13.0"
bitcoincore-rpc = "0.16.0"
redb = "3.1.0"
regex = "1.6.0"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rss = "2.0.1"
rust-embed = "6.4.0"
rustls = "0.23.20"
rustls-acme = { version = "0.15.0", features = ["axum"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = { version = "1.0.81", features = ["preserve_order"] }
serde_yaml = "0.9.17"
sys-info = "0.9.1"
tempfile = "3.2.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "time"] }
tokio-stream = "0.1.9"
tokio-util = {version = "0.7.3", features = ["compat"] }
tower-http = { version = "0.6.2", features = ["auth", "compression-br", "compression-gzip", "cors", "set-header"] }
url = { version = "2.2.2", features = ["serde"] }
ciborium = "0.2.2"
brotli = "8.0.2"

[dev-dependencies]
executable-path = "1.0.0"
pretty_assertions = "1.2.1"
reqwest = { version = "0.12.0", features = ["blocking", "json"] }
test-bitcoincore-rpc = { path = "test-bitcoincore-rpc" }
unindent = "0.2.1"

[[bin]]
name = "ordpep"
path = "src/bin/main.rs"

[lib]
name = "ord"
path = "src/lib.rs"

[[test]]
name = "integration"
path = "tests/lib.rs"

[build-dependencies]
pulldown-cmark = "0.9.2"

[patch.crates-io]
bitcoin = { git = "https://github.com/mvdnbrk/rust-pepecoin" }
bitcoincore-rpc = { git = "https://github.com/apezord/rust-dogecoincore-rpc" }
